<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.main.balance.BalanceFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/balanceTintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp"
        android:paddingLeft="16dp"
        android:text="@string/available_finance"
        android:textSize="14sp"
        android:textColor="@color/medium_grey"/>

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceTintTextView"
        android:paddingLeft="16dp"
        android:paddingBottom="37dp"
        android:paddingTop="1dp"
        android:text="0"
        android:textSize="48sp"
        android:textColor="@color/pale_orange"/>

    <LinearLayout
        android:id="@+id/expensesLinearLayout"
        android:layout_width="0dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toBottomOf="@id/balanceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/incomesLinearLayout"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expensesTintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expences"
            android:textSize="10sp"
            android:textColor="@color/medium_grey"
            />
        <TextView
            android:id="@+id/expensesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:textColor="@color/dark_sky_blue"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomesLinearLayout"
        android:layout_width="0dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toBottomOf="@id/balanceTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expensesLinearLayout"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incomesTintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomes"
            android:textSize="10sp"
            android:textColor="@color/medium_grey"
            />
        <TextView
            android:id="@+id/incomesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:textColor="@color/apple_green"
            />
    </LinearLayout>
    
    <ru.leushinilya.loftmoney.screens.main.balance.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expensesLinearLayout"
        android:layout_marginTop="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>